# python-typer-gmail-copy-tool

./: .copilot-instructions.md  .gitignore  LICENSE  README-ITA.md  README-SEMPLICE.md  README.md  REAMDE-ITA.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
src/: mouse_jiggler.py
src/gmail_copy_tool/: __init__.py  main.py
src/gmail_copy_tool/commands/: analyze.py  compare.py  copy.py  delete_duplicates.py  list_accounts.py  remove_copied.py  setup.py
src/gmail_copy_tool/core/: gmail_client.py
src/gmail_copy_tool/utils/: canonicalization.py  checkpoint.py  config.py  gmail_api_helpers.py  timing.py
tests/: test_analyze_command.py  test_canonicalization.py  test_checkpoint.py  test_commands.py  test_config_example.json  test_copy_command.py  test_date_preservation.py  test_gmail_api_helpers.py  test_gmail_client.py  test_integration.py  test_main.py  test_sync_integration.py  test_timing.py
