[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-copy-tool"
version = "0.1.0"
description = "A CLI tool to copy, compare, analyze, and deduplicate Gmail accounts."
authors = [
    { name = "ltpitt" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
        "typer >=0.16.0",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth",
    "rich",
    "pytest"
]

[project.scripts]
gmail-copy-tool = "gmail_copy_tool.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
